--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -248,13 +248,13 @@
             <button type="button" role="tab" id="tab-staffing" class="uc-tab"
                     aria-selected="false" aria-controls="panel-staffing" tabindex="-1" data-tab="staffing">
               <span class="material-icons" aria-hidden="true">group</span>
-              <span>Staffing</span>
+              <span>Facilitators</span>
             </button>
 
             <button type="button" role="tab" id="tab-team" class="uc-tab"
                     aria-selected="false" aria-controls="panel-team" tabindex="-1" data-tab="team">
               <span class="material-icons" aria-hidden="true">task_alt</span>
-              <span>Team &amp; Approvals</span>
+              <span>Swap &amp; Approvals</span>
               {% if approvals_count %}
                 <span class="uc-badge" aria-label="{{ approvals_count }} pending approvals">{{ approvals_count }}</span>
               {% endif %}
